# sweetDealer

./: .gitignore  manage.py  pyproject.toml  req.txt
core/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_remove_order_items_delete_orderitem_order_items.py  0004_remove_order_dealer_order_book.py  0005_alter_order_status.py  0006_alter_order_options_rename_book_order_bill_book_and_more.py  0007_order_bill_image.py  0008_alter_order_unique_together_order_dealer_and_more.py  0009_alter_order_order_number.py  0010_alter_order_unique_together_alter_order_created_at.py
custom_auth/: admin.py
custom_auth/migrations/: 0001_initial.py  0002_dealer.py
export/: excel.py
sweetDealer/: settings.py  urls.py
sweetDealer/sweetDealer/: asgi.py  settings.py  urls.py  wsgi.py
